# test-autodetect-wasmedge-plugins

./: .gitignore  Cargo.toml  README.md
.github/workflows/: verify.yml
src/: main.rs
